[package]
name = "random_access_unicode"
description = "Provide random access to the unicode characters in a file"
version = "0.2.3"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/casually-blue/random_access_unicode"

author = "Thomas Terry <darkforestsilence@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
